--- a/posts/templates/posts/create_post.html
+++ b/posts/templates/posts/create_post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1>CREATE</h1>
-  <form action="{% url 'posts:create_post' %}" method="post">
+  <form action="{% url 'posts:create_post' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="글 작성"></input>
