--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -1,13 +1,29 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
   <h1>{{ post.title }}</h1>
   <form action="{% url 'posts:detail' post.pk %}" method="post">
     {% csrf_token %}
-    <input type="radio" id="select1" name="answer" value="select1">
-    <label for="select1">{{ post.select1_content }}</label><br>
-    <input type="radio" id="select2" name="answer" value="select2">
-    <label for="select2">{{ post.select2_content }}</label><br>
+    <div style="display: inline-block; text-align: center;">    
+      <input type="radio" id="select1" name="answer" value="select1">
+      <label for="select1">{{ post.select1_content }}</label><br>
+      {% if post.select1_image %}
+        <div style="text-align: center;">
+          <img src="{{ post.select1_image.url }}" alt="select1_image" width="100" height="100">
+        </div>
+      {% endif %}
+    </div>
+    <div style="display: inline-block; text-align: center;">      
+      <input type="radio" id="select2" name="answer" value="select2">
+      <label for="select2">{{ post.select2_content }}</label><br>
+      {% if post.select2_image %}
+        <div style="text-align: center;">
+          <img src="{{ post.select2_image.url }}" alt="select2_image" width="100" height="100">
+        </div>
+      {% endif %}
+    </div>
     <button type="submit">제출</button>
   </form>
   <ul>
